--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,12 @@
 name: Events Demo 1
-on: [push,workflow_dispatch]
+on: 
+  pull_request:
+    types:
+      - opened
+  push:
+    branches:
+      - main
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
